[package]
name = "rust-euler"
version = "0.1.0"
authors = ["tomitheninja <suditomi@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.fibonacci]
path = "./pkg/fibonacci/"

[dependencies.prime_factors]
path = "./pkg/prime_factors/"

[dependencies.prime_table]
path = "./pkg/prime_table/"

[dependencies.triangular_number]
path = "./pkg/triangular_number/"

[dependencies.collatz_sequence]
path = "./pkg/collatz_sequence/"

[dependencies.path_sum_triangle]
path = "./pkg/path_sum_triangle/"
